--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
   <head>
     <title>Snake</title>
     <link rel="stylesheet" href="snake.css" />
-    <script src="snake.js"></script>
+    <script src="scripts/direction.js"></script>
+    <script src="scripts/snake.js"></script>
+    <script src="scripts/food.js"></script>
+    <script src="scripts/score.js"></script>
+    <script src="scripts/game.js"></script>
+    <script src="scripts/main.js"></script>
   </head>
   <body onload="main()">
     <h1>Snake Game</h1>
+    <div>
+      <h4 class="score"></h4>
+    </div>
     <div id="grid"></div>
   </body>
 </html>
