Added feature of game over
if the snake will touch itself the game will be over

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
       <h4 class="score"></h4>
     </div>
     <div id="grid"></div>
+    <div class="gameOver">
+      <h4 class="status"></h4>
+    </div>
   </body>
 </html>
