Added a feature of game over after a perticular interval of time
added a method is timeOut in game class
game will over after a definite period of time.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
   </head>
   <body onload="main()">
     <h1>Snake Game</h1>
-    <div>
-      <h4 class="score"></h4>
+    <div class="gameStatus">
+      <div>
+        <h4 class="score"></h4>
+      </div>
+      <div>
+        <h4 class="timer">Time Left:</h4>
+      </div>
     </div>
     <div id="grid"></div>
     <div class="gameOver">
