--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="scripts/score.js"></script>
     <script src="scripts/game.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/timer.js"></script>
   </head>
   <body onload="main()">
     <h1>Snake Game</h1>
