--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="scripts/timer.js"></script>
     <script src="scripts/main.js"></script>
   </head>
-  <body onload="main()">
+  <body>
     <h1>Snake Game</h1>
     <div class="gameStatus">
       <div>
